--- a/public/index.html
+++ b/public/index.html
@@ -7,45 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Javier Murillo Burgos</title>
     <!-- Links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        
     </header>
 
     <main>
 
-        <div class="welcome">
-            <h1>Bienvenido</h1>
-        </div>
+       <div class="main-container">
+        <!-- Aside -->
+            <div class="aside">
+                <div class="logo">
+                    <a href="#"><span>J</span>avi</a>
+                </div>
+                <ul class="nav">
+                    <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
+                    <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                    <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
+                    <li><a href="#"><i class="fa fa-briefcase">Portfolio</i></a></li>
+                    <li><a href="#"><i class="fa fa-comments">Contact</i></a></li>
+                </ul>
+            </div>
+            <div class="main-content">
+                <section class="home section">
+                    Home
+                </section>
+            </div>
+       </div>
 
     </main>
     <footer></footer>
